--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,32 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+.search-form {
+    margin-bottom: 20px;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.load-more {
+  margin-top: 20px;
+  display: block;
+  margin-bottom: 20px;
+}
+.is-hidden {
+  visibility: hidden;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  margin-right:20px;
+}
+.img {
+  width: auto;
+  height: 300px;
+}
+.info {
+  display: flex;
+}
+.info-item {
+  margin-right: 10px;
 }
