--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,5 +1,8 @@
-.search-form {
-    margin-bottom: 20px;
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #000000;
 }
 
 .load-more {
@@ -18,14 +21,17 @@
 .photo-card {
   display: flex;
   flex-direction: column;
+  width: 400px;
   margin-right:20px;
 }
 .img {
-  width: auto;
-  height: 300px;
+  width: 100%;
+  height: auto;
 }
 .info {
   display: flex;
+  flex-grow: 1;
+  align-items: flex-end;
 }
 .info-item {
   margin-right: 10px;
