--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,10 +1,3 @@
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #000000;
-}
-
 .load-more {
   margin-top: 20px;
   display: block;
@@ -17,12 +10,17 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 20px;
 }
 .photo-card {
   display: flex;
   flex-direction: column;
   width: 400px;
-  margin-right:20px;
+  margin-bottom: 20px;
+}
+.photo-card:not(:nth-child(3n + 3)) {
+  margin-right: 20px;
 }
 .img {
   width: 100%;
@@ -32,7 +30,38 @@
   display: flex;
   flex-grow: 1;
   align-items: flex-end;
+  background-color: #ebebeb;
 }
 .info-item {
   margin-right: 10px;
+  font-size: 12px;
+  color: gray;
+}
+.search-form {
+  padding: 20px 0px 20px 0px;
+  margin: 0 auto;
+}
+.input {
+  width: 400px;
+  height: 40px;
+  border-radius: 3px;
+  border-color: grey;
+}
+.btnSubmit {
+  height: 40px;
+  border-radius: 3px;
+  width: 100px;
+  border-color: gray;
+}
+.load-more {
+  height: 40px;
+  width: 300px;
+  margin: 0 auto;
+}
+.message-bottom {
+  font-size: 20px;
+  color: gray;
+}
+.all-content {
+  margin: 0 auto;
 }
