--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import './common';
 @import './example';
 
-.container {
+.container-gellery {
   width: 1400px;
   margin: 0 auto;
   display: flex;
