--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -8,6 +8,7 @@
 }
 .is-hidden {
   visibility: hidden;
+  display: none;
 }
 
 .gallery {
@@ -27,7 +28,8 @@
 }
 .img {
   width: 100%;
-  height: auto;
+  height: 300px;
+  object-fit: cover;
 }
 .info {
   display: flex;
@@ -43,23 +45,29 @@
 .search-form {
   padding: 20px 0px 20px 0px;
   margin: 0 auto;
+  display: flex;
 }
 .input {
   width: 400px;
   height: 40px;
+  outline: none;
   border-radius: 3px;
-  border-color: grey;
+  border: none;
+  border: 1px solid grey;
+  margin-right: 10px;
 }
 .btnSubmit {
   height: 40px;
   border-radius: 3px;
   width: 100px;
-  border-color: gray;
+  outline: none;
 }
-// .load-more {
-
-//   margin: 0 auto;
-// }
+.btnSearch {
+  height: 40px;
+  border-radius: 3px;
+  width: 100px;
+  outline: none;
+}
 .message-bottom {
   font-size: 20px;
   color: gray;
